--- a/assets/site/main.scss
+++ b/assets/site/main.scss
@@ -57,6 +57,7 @@ body {
     font-family: var(--body-font);
 
     > header {
+        padding-top: .5rem;
         margin-bottom: 3rem;
 
         display: flex;
